// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Monomer Group > should apply correct style if selected 1`] = `
<div
  class="css-1iegw5a-Card e1fkopzz0"
  data-monomer-item-id="RRMonomerName___RRName"
  data-testid="RRMonomerName___RRName"
>
  <span
    class="css-1da7ffc-CardTitle e1fkopzz2"
  >
    R
  </span>
  <div
    aria-label=""
    class="css-1dm515m-AutochainIconWrapper e1fkopzz4"
    data-mui-internal-clone-element="true"
  >
    <svg
      class="autochain css-p643xf-AutochainIcon e1fkopzz3"
      name="monomer-autochain"
    />
  </div>
  <button
    aria-label="Toggle favorite"
    class="star "
    type="button"
  >
    ★
  </button>
</div>
`;

exports[`Monomer Group > should render correct with title prop 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="css-1roke0u-GroupContainerRow-GroupContainerColumn e8901gh2"
      >
        <div
          class="css-tw020n-GroupTitle e8901gh3"
        >
          Mock title
        </div>
        <div
          class="css-1ls8773-ItemsContainer e8901gh0"
        >
          <div
            class="css-13jk9wb-Card e1fkopzz0"
            data-monomer-item-id="RRMonomerName___RRName"
            data-testid="RRMonomerName___RRName"
          >
            <span
              class="css-1da7ffc-CardTitle e1fkopzz2"
            >
              R
            </span>
            <div
              aria-label=""
              class="css-1dm515m-AutochainIconWrapper e1fkopzz4"
              data-mui-internal-clone-element="true"
            >
              <svg
                class="autochain css-p643xf-AutochainIcon e1fkopzz3"
                name="monomer-autochain"
              />
            </div>
            <button
              aria-label="Toggle favorite"
              class="star "
              type="button"
            >
              ★
            </button>
          </div>
          <div
            class="css-t26n47-Card e1fkopzz0"
            data-monomer-item-id="mAMonomerName___mAName"
            data-testid="mAMonomerName___mAName"
          >
            <span
              class="css-1da7ffc-CardTitle e1fkopzz2"
            >
              m
            </span>
            <div
              aria-label=""
              class="css-1dm515m-AutochainIconWrapper e1fkopzz4"
              data-mui-internal-clone-element="true"
            >
              <svg
                class="autochain css-p643xf-AutochainIcon e1fkopzz3"
                name="monomer-autochain"
              />
            </div>
            <button
              aria-label="Toggle favorite"
              class="star "
              type="button"
            >
              ★
            </button>
          </div>
          <div
            class="css-7fm85v-Card e1fkopzz0"
            data-monomer-item-id="dDMonomerName___dDName"
            data-testid="dDMonomerName___dDName"
          >
            <span
              class="css-1da7ffc-CardTitle e1fkopzz2"
            >
              d
            </span>
            <div
              aria-label=""
              class="css-1dm515m-AutochainIconWrapper e1fkopzz4"
              data-mui-internal-clone-element="true"
            >
              <svg
                class="autochain css-p643xf-AutochainIcon e1fkopzz3"
                name="monomer-autochain"
              />
            </div>
            <button
              aria-label="Toggle favorite"
              class="star "
              type="button"
            >
              ★
            </button>
          </div>
          <div
            class="css-13jk9wb-Card e1fkopzz0"
            data-monomer-item-id="arRMonomerName___arRName"
            data-testid="arRMonomerName___arRName"
          >
            <span
              class="css-1da7ffc-CardTitle e1fkopzz2"
            >
              ar
            </span>
            <div
              aria-label=""
              class="css-1dm515m-AutochainIconWrapper e1fkopzz4"
              data-mui-internal-clone-element="true"
            >
              <svg
                class="autochain css-p643xf-AutochainIcon e1fkopzz3"
                name="monomer-autochain"
              />
            </div>
            <button
              aria-label="Toggle favorite"
              class="star "
              type="button"
            >
              ★
            </button>
          </div>
          <div
            class="css-t26n47-Card e1fkopzz0"
            data-monomer-item-id="LdLMonomerName___LdLRName"
            data-testid="LdLMonomerName___LdLRName"
          >
            <span
              class="css-1da7ffc-CardTitle e1fkopzz2"
            >
              Ld
            </span>
            <div
              aria-label=""
              class="css-1dm515m-AutochainIconWrapper e1fkopzz4"
              data-mui-internal-clone-element="true"
            >
              <svg
                class="autochain css-p643xf-AutochainIcon e1fkopzz3"
                name="monomer-autochain"
              />
            </div>
            <button
              aria-label="Toggle favorite"
              class="star "
              type="button"
            >
              ★
            </button>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="css-1roke0u-GroupContainerRow-GroupContainerColumn e8901gh2"
    >
      <div
        class="css-tw020n-GroupTitle e8901gh3"
      >
        Mock title
      </div>
      <div
        class="css-1ls8773-ItemsContainer e8901gh0"
      >
        <div
          class="css-13jk9wb-Card e1fkopzz0"
          data-monomer-item-id="RRMonomerName___RRName"
          data-testid="RRMonomerName___RRName"
        >
          <span
            class="css-1da7ffc-CardTitle e1fkopzz2"
          >
            R
          </span>
          <div
            aria-label=""
            class="css-1dm515m-AutochainIconWrapper e1fkopzz4"
            data-mui-internal-clone-element="true"
          >
            <svg
              class="autochain css-p643xf-AutochainIcon e1fkopzz3"
              name="monomer-autochain"
            />
          </div>
          <button
            aria-label="Toggle favorite"
            class="star "
            type="button"
          >
            ★
          </button>
        </div>
        <div
          class="css-t26n47-Card e1fkopzz0"
          data-monomer-item-id="mAMonomerName___mAName"
          data-testid="mAMonomerName___mAName"
        >
          <span
            class="css-1da7ffc-CardTitle e1fkopzz2"
          >
            m
          </span>
          <div
            aria-label=""
            class="css-1dm515m-AutochainIconWrapper e1fkopzz4"
            data-mui-internal-clone-element="true"
          >
            <svg
              class="autochain css-p643xf-AutochainIcon e1fkopzz3"
              name="monomer-autochain"
            />
          </div>
          <button
            aria-label="Toggle favorite"
            class="star "
            type="button"
          >
            ★
          </button>
        </div>
        <div
          class="css-7fm85v-Card e1fkopzz0"
          data-monomer-item-id="dDMonomerName___dDName"
          data-testid="dDMonomerName___dDName"
        >
          <span
            class="css-1da7ffc-CardTitle e1fkopzz2"
          >
            d
          </span>
          <div
            aria-label=""
            class="css-1dm515m-AutochainIconWrapper e1fkopzz4"
            data-mui-internal-clone-element="true"
          >
            <svg
              class="autochain css-p643xf-AutochainIcon e1fkopzz3"
              name="monomer-autochain"
            />
          </div>
          <button
            aria-label="Toggle favorite"
            class="star "
            type="button"
          >
            ★
          </button>
        </div>
        <div
          class="css-13jk9wb-Card e1fkopzz0"
          data-monomer-item-id="arRMonomerName___arRName"
          data-testid="arRMonomerName___arRName"
        >
          <span
            class="css-1da7ffc-CardTitle e1fkopzz2"
          >
            ar
          </span>
          <div
            aria-label=""
            class="css-1dm515m-AutochainIconWrapper e1fkopzz4"
            data-mui-internal-clone-element="true"
          >
            <svg
              class="autochain css-p643xf-AutochainIcon e1fkopzz3"
              name="monomer-autochain"
            />
          </div>
          <button
            aria-label="Toggle favorite"
            class="star "
            type="button"
          >
            ★
          </button>
        </div>
        <div
          class="css-t26n47-Card e1fkopzz0"
          data-monomer-item-id="LdLMonomerName___LdLRName"
          data-testid="LdLMonomerName___LdLRName"
        >
          <span
            class="css-1da7ffc-CardTitle e1fkopzz2"
          >
            Ld
          </span>
          <div
            aria-label=""
            class="css-1dm515m-AutochainIconWrapper e1fkopzz4"
            data-mui-internal-clone-element="true"
          >
            <svg
              class="autochain css-p643xf-AutochainIcon e1fkopzz3"
              name="monomer-autochain"
            />
          </div>
          <button
            aria-label="Toggle favorite"
            class="star "
            type="button"
          >
            ★
          </button>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Monomer Group > should render correct without title prop 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="css-1roke0u-GroupContainerRow-GroupContainerColumn e8901gh2"
      >
        <div
          class="css-1ls8773-ItemsContainer e8901gh0"
        >
          <div
            class="css-13jk9wb-Card e1fkopzz0"
            data-monomer-item-id="RRMonomerName___RRName"
            data-testid="RRMonomerName___RRName"
          >
            <span
              class="css-1da7ffc-CardTitle e1fkopzz2"
            >
              R
            </span>
            <div
              aria-label=""
              class="css-1dm515m-AutochainIconWrapper e1fkopzz4"
              data-mui-internal-clone-element="true"
            >
              <svg
                class="autochain css-p643xf-AutochainIcon e1fkopzz3"
                name="monomer-autochain"
              />
            </div>
            <button
              aria-label="Toggle favorite"
              class="star "
              type="button"
            >
              ★
            </button>
          </div>
          <div
            class="css-t26n47-Card e1fkopzz0"
            data-monomer-item-id="mAMonomerName___mAName"
            data-testid="mAMonomerName___mAName"
          >
            <span
              class="css-1da7ffc-CardTitle e1fkopzz2"
            >
              m
            </span>
            <div
              aria-label=""
              class="css-1dm515m-AutochainIconWrapper e1fkopzz4"
              data-mui-internal-clone-element="true"
            >
              <svg
                class="autochain css-p643xf-AutochainIcon e1fkopzz3"
                name="monomer-autochain"
              />
            </div>
            <button
              aria-label="Toggle favorite"
              class="star "
              type="button"
            >
              ★
            </button>
          </div>
          <div
            class="css-7fm85v-Card e1fkopzz0"
            data-monomer-item-id="dDMonomerName___dDName"
            data-testid="dDMonomerName___dDName"
          >
            <span
              class="css-1da7ffc-CardTitle e1fkopzz2"
            >
              d
            </span>
            <div
              aria-label=""
              class="css-1dm515m-AutochainIconWrapper e1fkopzz4"
              data-mui-internal-clone-element="true"
            >
              <svg
                class="autochain css-p643xf-AutochainIcon e1fkopzz3"
                name="monomer-autochain"
              />
            </div>
            <button
              aria-label="Toggle favorite"
              class="star "
              type="button"
            >
              ★
            </button>
          </div>
          <div
            class="css-13jk9wb-Card e1fkopzz0"
            data-monomer-item-id="arRMonomerName___arRName"
            data-testid="arRMonomerName___arRName"
          >
            <span
              class="css-1da7ffc-CardTitle e1fkopzz2"
            >
              ar
            </span>
            <div
              aria-label=""
              class="css-1dm515m-AutochainIconWrapper e1fkopzz4"
              data-mui-internal-clone-element="true"
            >
              <svg
                class="autochain css-p643xf-AutochainIcon e1fkopzz3"
                name="monomer-autochain"
              />
            </div>
            <button
              aria-label="Toggle favorite"
              class="star "
              type="button"
            >
              ★
            </button>
          </div>
          <div
            class="css-t26n47-Card e1fkopzz0"
            data-monomer-item-id="LdLMonomerName___LdLRName"
            data-testid="LdLMonomerName___LdLRName"
          >
            <span
              class="css-1da7ffc-CardTitle e1fkopzz2"
            >
              Ld
            </span>
            <div
              aria-label=""
              class="css-1dm515m-AutochainIconWrapper e1fkopzz4"
              data-mui-internal-clone-element="true"
            >
              <svg
                class="autochain css-p643xf-AutochainIcon e1fkopzz3"
                name="monomer-autochain"
              />
            </div>
            <button
              aria-label="Toggle favorite"
              class="star "
              type="button"
            >
              ★
            </button>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="css-1roke0u-GroupContainerRow-GroupContainerColumn e8901gh2"
    >
      <div
        class="css-1ls8773-ItemsContainer e8901gh0"
      >
        <div
          class="css-13jk9wb-Card e1fkopzz0"
          data-monomer-item-id="RRMonomerName___RRName"
          data-testid="RRMonomerName___RRName"
        >
          <span
            class="css-1da7ffc-CardTitle e1fkopzz2"
          >
            R
          </span>
          <div
            aria-label=""
            class="css-1dm515m-AutochainIconWrapper e1fkopzz4"
            data-mui-internal-clone-element="true"
          >
            <svg
              class="autochain css-p643xf-AutochainIcon e1fkopzz3"
              name="monomer-autochain"
            />
          </div>
          <button
            aria-label="Toggle favorite"
            class="star "
            type="button"
          >
            ★
          </button>
        </div>
        <div
          class="css-t26n47-Card e1fkopzz0"
          data-monomer-item-id="mAMonomerName___mAName"
          data-testid="mAMonomerName___mAName"
        >
          <span
            class="css-1da7ffc-CardTitle e1fkopzz2"
          >
            m
          </span>
          <div
            aria-label=""
            class="css-1dm515m-AutochainIconWrapper e1fkopzz4"
            data-mui-internal-clone-element="true"
          >
            <svg
              class="autochain css-p643xf-AutochainIcon e1fkopzz3"
              name="monomer-autochain"
            />
          </div>
          <button
            aria-label="Toggle favorite"
            class="star "
            type="button"
          >
            ★
          </button>
        </div>
        <div
          class="css-7fm85v-Card e1fkopzz0"
          data-monomer-item-id="dDMonomerName___dDName"
          data-testid="dDMonomerName___dDName"
        >
          <span
            class="css-1da7ffc-CardTitle e1fkopzz2"
          >
            d
          </span>
          <div
            aria-label=""
            class="css-1dm515m-AutochainIconWrapper e1fkopzz4"
            data-mui-internal-clone-element="true"
          >
            <svg
              class="autochain css-p643xf-AutochainIcon e1fkopzz3"
              name="monomer-autochain"
            />
          </div>
          <button
            aria-label="Toggle favorite"
            class="star "
            type="button"
          >
            ★
          </button>
        </div>
        <div
          class="css-13jk9wb-Card e1fkopzz0"
          data-monomer-item-id="arRMonomerName___arRName"
          data-testid="arRMonomerName___arRName"
        >
          <span
            class="css-1da7ffc-CardTitle e1fkopzz2"
          >
            ar
          </span>
          <div
            aria-label=""
            class="css-1dm515m-AutochainIconWrapper e1fkopzz4"
            data-mui-internal-clone-element="true"
          >
            <svg
              class="autochain css-p643xf-AutochainIcon e1fkopzz3"
              name="monomer-autochain"
            />
          </div>
          <button
            aria-label="Toggle favorite"
            class="star "
            type="button"
          >
            ★
          </button>
        </div>
        <div
          class="css-t26n47-Card e1fkopzz0"
          data-monomer-item-id="LdLMonomerName___LdLRName"
          data-testid="LdLMonomerName___LdLRName"
        >
          <span
            class="css-1da7ffc-CardTitle e1fkopzz2"
          >
            Ld
          </span>
          <div
            aria-label=""
            class="css-1dm515m-AutochainIconWrapper e1fkopzz4"
            data-mui-internal-clone-element="true"
          >
            <svg
              class="autochain css-p643xf-AutochainIcon e1fkopzz3"
              name="monomer-autochain"
            />
          </div>
          <button
            aria-label="Toggle favorite"
            class="star "
            type="button"
          >
            ★
          </button>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
